// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Submit > form is invalid 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  position: relative;
}

.emotion-4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-4::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-4::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-4:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-4::placeholder {
  color: #727683;
  opacity: 0;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #792dd4;
}

.emotion-4:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
}

.emotion-4::placeholder {
  opacity: 1;
}

.emotion-6 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #727683;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size:font-family: Inter,sans-serif;
  font-size: 0.875rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-8 {
  height: auto;
}

.emotion-8[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

.emotion-10 {
  font-size: 12px;
  color: #b3144d;
  padding-top: 0.125rem;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div>
        <div
          class="emotion-2 emotion-3"
        >
          <input
            aria-label="test"
            autocomplete="on"
            class="emotion-4 emotion-5"
            name="toto"
            type="text"
            value="4"
          />
          <label
            aria-live="assertive"
            class="emotion-6 emotion-7"
          >
            test
          </label>
        </div>
        <div
          class="emotion-8 emotion-9"
          data-is-animated="true"
        >
          <div
            class="emotion-10 emotion-11"
          />
        </div>
      </div>
      <button
        class="emotion-12 emotion-13"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Submit > form is submitting 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.emotion-6 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <button
        class="emotion-2 emotion-3"
        disabled=""
        type="submit"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="emotion-4 emotion-5"
          role="progressbar"
          style="height: 1em; width: 1em;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="transparent"
            stroke-width="16"
          />
          <circle
            class="emotion-6"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="currentColor"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Submit > renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <button
        class="emotion-2 emotion-3"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Submit > renders correctly with icon and iconPosition  1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-4 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-4 path {
  fill: currentColor;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <button
        class="emotion-2 emotion-3"
        disabled=""
        type="submit"
      >
        <svg
          class="emotion-4 emotion-5"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2 8.25c0 .414.336.75.75.75h8.69l-1.22 1.22a.75.75 0 1 0 1.06 1.06l2.5-2.5a.75.75 0 0 0 0-1.06l-2.5-2.5a.75.75 0 1 0-1.06 1.06l1.22 1.22H2.75a.75.75 0 0 0-.75.75"
            fill-rule="evenodd"
          />
        </svg>
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;
